test/errors/binding_pat.expected
File "binding_pat.ml", line 3, characters 16-42:
Error: ppx_matches: invalid [%matches? ...] payload. Pattern `Some
       x` cannot bind any variables.
